Cleaning up code and replacing references to PEN Coordinator to Data Management Unit. Removed reference to schoolAPI and changed config map to include Institute API and removed permission for PEN_COORDINATORS.